# CSCI-2963--Intro-to-Open-Source

./: LICENSE.txt  Lab1.md  Lab2.md  Lab3.md  Lab6.md  Lab7.md  bio.md  lab5.md
Lab1/: Lab1.md
Lab4/: Lab4.md
Lab6/Step1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tutorial.cxx
Lab6/Step2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tutorial.cxx
Lab6/Step2/MathFunctions/: Makefile  cmake_install.cmake  mysqrt.cxx
Lab6/Step3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Lab6/Step3/MathFunctions/: Makefile  cmake_install.cmake  mysqrt.cxx
Lab6/Step4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Lab6/Step4/MathFunctions/: Makefile  cmake_install.cmake
Lab6/Step5/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Lab6/Step5/MathFunctions/: Makefile  cmake_install.cmake
Lab8/: Lab8.md  admissions.csv  lab8.R
files/Lab7/: words4.py  words4unordered.py  words5.py  words5unordered.py  words5unordered.py~
files/gitstats/HWserver_gitStats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
files/gitstats/MeNext_gitStats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
files/gitstats/Nepal_gitStats/: activity.html  authors.html  commits_by_author.plot  files.html  (+5 more)
files/unitTest/: markdown.py~  test_markdown_unittest.py
(+18 files in other folders)
